--- a/Assets.html
+++ b/Assets.html
@@ -11,7 +11,7 @@
         <img src="icon.png" style="width: 60px; height: 60px;">
         <h1 class="title">Blinktool</h1>
         
-        <a href="home.html" class="navbutton">Home</a>
+        <a href="index.html" class="navbutton">Home</a>
         <a href="Assets.html" class="navbutton">Assets</a>
     </div>
     <img src="" alt="">
