Added info about low poly foods
also contant email added.

--- a/Assets.html
+++ b/Assets.html
@@ -16,18 +16,66 @@
     </div>
     <img src="" alt="">
 
-    <div class="content">
-        <h1>Low poly rocks</h1>
-        <a href="https://assetstore.unity.com/packages/slug/254461" style="color:blueviolet; text-decoration: underline; font-size: 30px;">Package on Unity Asset Store</a>
-        <img src="thumbnail.png" style="width: 700px; border-radius: 10px; margin: 20px;">
-        <img src="Showcase.png" style="width: 700px; border-radius: 10px; margin: 20px;">
-        <p>Low poly rocks with 4 variants each,</p>
-        <li>Granite</li>
-        <li>Sandstone</li>
-        <li>Mossy</li>
-        <li>Snowy</li>
-        <p>58 rocks of each variant.
-            Smaller rocks, slabs and big boulders.</p>
+    <div class="assets">
+        <div class="content">
+            <h1>Low poly rocks</h1>
+            <a href="https://assetstore.unity.com/packages/slug/254461" style="color:blueviolet; text-decoration: underline; font-size: 30px;">Package on Unity Asset Store</a>
+            <img src="thumbnail.png" style="width: 550px; border-radius: 10px; margin: 20px;">
+            <img src="Showcase.png" style="width: 550px; border-radius: 10px; margin: 20px;">
+            <p>Low poly rocks with 4 variants each.</p>
+            <li>Granite</li>
+            <li>Sandstone</li>
+            <li>Mossy</li>
+            <li>Snowy</li>
+            <p>58 rocks of each variant.
+                Smaller rocks, slabs and big boulders.</p>
+        </div>
+
+        <div class="content">
+            <h1>Low poly foods</h1>
+            <a href="https://assetstore.unity.com/packages/slug/254695" style="color:blueviolet; text-decoration: underline; font-size: 30px;">Package on Unity Asset Store</a>
+            <img src="thumbnail_foods.png" style="width: 550px; border-radius: 10px; margin: 20px;">
+            <img src="foods.jpg" style="width: 550px; border-radius: 10px; margin: 20px;">
+            <p>25 low poly food and meal related 3d models.</p>
+            <li>Apple</li>
+            <li>Banana</li>
+            <li>Hamburger</li>
+            <li>Cheese</li>
+            <li>Croissant</li>
+            <li>Cucumber</li>
+            <li>Donut</li>
+            <li>Fries</li>
+            <li>Ketchup bottle</li>
+            <li>Mustard bottle</li>
+            <li>Coffee mug</li>
+            <li>Orange</li>
+            <li>Pizza</li>
+            <li>Sausage</li>
+            <li>Soda can</li>
+            <li>Steak</li>
+            <li>Spaghetti</li>
+            <li>Toast</li>
+            <li>Tomato</li>
+            <li>Water bottle</li>
+            <li>Plate</li>
+            <li>Fork</li>
+            <li>Spoon</li>
+            <li>Knife</li>
+            <li>Water glass</li>
+        </div>
+        <!--<div class="content">
+            <h1>Low poly rocks</h1>
+            <a href="https://assetstore.unity.com/packages/slug/254461" style="color:blueviolet; text-decoration: underline; font-size: 30px;">Package on Unity Asset Store</a>
+            <img src="thumbnail.png" style="width: 550px; border-radius: 10px; margin: 20px;">
+            <img src="Showcase.png" style="width: 550px; border-radius: 10px; margin: 20px;">
+            <p>Low poly rocks with 4 variants each,</p>
+            <li>Granite</li>
+            <li>Sandstone</li>
+            <li>Mossy</li>
+            <li>Snowy</li>
+            <p>58 rocks of each variant.
+                Smaller rocks, slabs and big boulders.</p>
+        </div>-->
     </div>
 </body>
 </html>
