--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <hr>
         <h1>What are we?</h1>
         <p>We are a small indie game studio and asset publisher. We create our games and assets using completely free resources and software.</p>
+
+        <h1 style="font-size: 25px; font-weight: 150; text-align: center;">Contant email: blinktoolgames@gmail.com</h1>
     </div>
 </body>
 </html>
